# ChrisPenner.github.io

./: .gitignore  .gitmodules  CNAME  README.md  atom.xml  blog.cabal  chrispenner-blog.cabal  circle.yml  index.html  my-blog-sitepipe.cabal  package.yaml  site.hs  stack.yaml
app/: Main.hs
css/: style.css  style.css.map  syntax.css
drafts/: comonadic-layout.html  flux-monoid.html  representable-discrimination.html
hask/: README.md  hask.cabal  stack.yaml
js/: main.min.js
posts/: 2014-05-19-switch-to-mac.md  2014-05-25-capslock.md  2014-07-26-legacy-in-design.md  2014-08-02-set-the-data-free.md  2014-08-31-worth-a-read-1.md  2014-09-24-modular-software.md  2014-09-26-you-own-your-data.md  2014-10-10-worth-a-read-2.md  2014-10-15-gem-neovim.md  2014-11-03-gem-jekyll.md  2015-01-03-procedural-content.md  2015-01-05-gem-git.md  2015-01-13-worth-a-read-3.md  2015-01-21-gem-font-awesome.md  2015-02-06-vim-vs-emacs.md  2015-02-13-worth-a-read-4.md  2015-02-21-gem-duckling.md  2015-03-19-getting-schooled.md  2015-04-02-use-semantic-versioning.md  2015-04-25-boxkite.md  2015-09-04-auto-env-trick.md  2016-01-02-let-there-be-truth.md  2016-02-15-dont-argue.md  2016-07-26-python-tail-recursion.md  2017-04-08-kleisli-endo.md  adjunction-battleship.html  advent-of-optics-01.html  advent-of-optics-02.html  advent-of-optics-03.html  advent-of-optics-04.html  algebraic.html  asts-with-fix-and-free.html  auto-env-trick.html  bigquery-sheets.html  boxkite.html  capslock.html  conways-game-of-life.html  dont-argue.html  free-forgetful-functors.html  gadt-design.html  (+48 more)
tag/: CSS.html  Clojure.html  Design.html  Python.html  Typography.html  UX.html  Unix.html  Vim.html  clojure.html  css.html  design.html  git.html  haskell.html  open-source.html  optics.html  programming.html  python.html  ruby.html  testing.html  typography.html  unison.html  unix.html  ux.html  vim.html  workflow.html
templates/: base.html  contents.html  gem-info.html  meta-data.html  (+1 more)
(+127 files in other folders)
