name:                blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ChrisPenner/my-blog-sitepipe#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2017 Chris Penner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable build-site
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sitepipe
                     , text
                     , mustache >= 2.2.3
                     , lens
                     , time
  default-language:    Haskell2010

